OSGi RTE / Felix SCR added